[package]
name = "forecast-flows-worker"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "NDJSON stdio worker for ForecastFlows protocol v2 (health + compare)."
publish = false

[[bin]]
name = "forecast-flows-worker"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
forecast-flows-pm.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
